DFR-2238-Bring in changes from Intervener branch